# IotMd

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1  run_collect.ps1
data/: sample_topology.json
data/sample_snapshots/: access_switch.json  core_switch.json  ruijie_ap.json
docs/: WEB_DEPLOYMENT.md
examples/: inventory.yaml
frontend/: app.js  index.html  styles.css
iotmd/: __init__.py  __main__.py  ai.py  auth.py  chat.py  cli.py  config.py  database.py  discovery.py  generator.py  interactive.py  ssh.py  topology.py  web.py  webapp.py
iotmd/collectors/: __init__.py  common.py  huawei.py  ruijie.py
iotmd/frontend/: index.html
sql/: iotmd_mysql.sql
src/: ai_client.py  ai_summary.py  collect_device_snapshot.py  generate_topology_doc.py  scan_network_topology.py
tests/: test_cli_flow.py
