[project]
name = "iotmd"
version = "0.1.0"
description = "Markdown + Git based ops documentation generator for network devices."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "IotMd" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pymysql>=1.1.1",
  "paramiko>=3.4.0",
  "requests>=2.32.3",
  "pyyaml>=6.0.2",
]

